payal slider updated and blurred text bug removed

--- a/demo/index.css
+++ b/demo/index.css
@@ -298,7 +298,7 @@ main {
 }
 
 .anklet-row{
-    width: 100%;
+    /* width: 100%; */
     height: 250px;
     flex-shrink: 0;
     background-color: #000;
@@ -308,6 +308,7 @@ main {
     justify-content: space-around;
     padding-top: 1%;
     padding-bottom: 1%;
+    padding-right: 5%;
 }
 
 .anklet-row .anklet-grid{
@@ -316,6 +317,7 @@ main {
     display: flex;
     flex-direction: column;
 }
+/*
 .desktop-slider .anklet-row .anklet-grid{
     width: 20%;
 }
@@ -330,10 +332,10 @@ main {
 
 .mobile-slider .anklet-row .anklet-grid{
     width: 80%;
-}
+} */
 
 .anklet-grid .anklet-image {
-    width: 100%;
+    width: 200px;
     height: 100%;
     background-size: cover;
     background-repeat: no-repeat;
@@ -349,7 +351,7 @@ main {
     transform: scale(1.3);
 }
 
-
+/* 
 
 @media (min-width: 850px){
     .anklet .tablet-slider{
@@ -406,7 +408,7 @@ main {
         display: none;
     }
 
-}
+} */
 
 
 /*----------------------------------Rings&Bracelet----------------------*/
@@ -492,13 +494,17 @@ main {
     opacity: 0.8;
 }
 
-.class5 .text{
+.text-parallax-container{
+    position: relative;
+}
+.text-parallax-container .text{
     position: absolute;
     border-top: #000;
     border-bottom: #000;
     font-size: 3vw;
     font-weight: 300;
     opacity: 1;
+    z-index: 2;
 }
 
 .parallax1{
